data/all_generated_tests/raw_wast_tests/call_indirect_IncorrectConditionEvaluation_4357.wast
;; 6. **Test Description**: A `call_indirect` instruction followed by a loop that includes a `br_if` to break the loop based on the result of the call to indirectly test loop condition handling.      **Specific Constraint**: Maintaining loop state and correctly breaking the loop when proper conditions are met.      **Incorrect Condition Evaluation**: See if `br_if` improperly evaluates conditions leading to incorrect loop exits.

(assert_invalid
  (module
    (type (func (result i32)))
    (type (func (param i32) (result i32)))
    (table 1 funcref)
    (elem (i32.const 0) 0)
    (func $get_constant (result i32)
      i32.const 42
    )
    (func $loop_with_indirect_call (param i32) (result i32)
      (local $i i32)
      local.get 0
      local.set $i
      (block $exit
        (loop $loop
          local.get $i
          (call_indirect (type 0) (i32.const 0))
          br_if $exit
          local.get $i
          i32.const 1
          i32.sub
          local.set $i
          br $loop
        )
      )
      local.get $i
    )
  )
  "type mismatch"
)